# intern-diary-writer

./: README.md  app.py  example.xlsx  excel.py  llm.py  main.py  prompts.yml  pyproject.toml  requirements.txt
src/: app.py  llm.py  main.py  record.py
