[tool.poetry]
name = "inter diary writer"
version = "0.1.0"
description = ""
authors = ["Hirusha Fernando <heshanhfernando@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.5"
python-dotenv = "^1.0.1"
openai = "^1.65.2"
instructor = "^1.7.2"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
